syntax = "proto3";
package msg;

message CreatePoolRequest{
    string name = 1;
    int32 pgsize = 2;
    int32 pgcount = 3;
    string failuredomain = 4;
    string root = 5;
}

message CreatePoolResponse{
    bool ok = 1;
    int32 poolid = 2;
}

message DeletePoolRequest{
    string name = 1;
}

message DeletePoolResponse{
    bool ok = 1;
}

message ApplyIDRequest{
    string uuid = 1;
}

message ApplyIDResponse{
    string uuid = 1;
    int32 id = 2;
}

message BootRequest {
    int32 osd_id = 1;
    string uuid = 2;
    int64 size = 3;
    uint32 port = 4;
    string address = 5;
    string host = 6;
}

message BootResponse {
bool ok = 1;
}

message StopRequest {
    int32 id = 1;
}


message StopResponse {
bool ok = 1;
}

message HeartbeatRequest {
    int32 id = 1;
}
message HeartbeatResponse {
bool ok = 1;
}

message CreatePGRequest {
    int32 id = 1;
    int32 pgid = 2;
    int32 other_osd1 = 3;
    int32 other_osd2 = 4;
}

message CreatePGResponse {
bool ok = 1;
}

message DeletePGRequest {
    int32 id = 1;
    int32 pgid = 2;
}

message DeletePGResponse {
bool ok = 1;
}



message Request {
    oneof union {
        BootRequest boot_request = 1;
        StopRequest stop_request = 2;
        HeartbeatRequest heartbeat_request = 3;
        CreatePGRequest create_pg_request = 4;
        DeletePGRequest delete_pg_request = 5;
        ApplyIDRequest apply_id_request = 6;
        CreatePoolRequest create_pool_request = 7;
    }
}

message Response {
    oneof union {
        BootResponse boot_response = 1;
        StopResponse stop_response = 2;
        HeartbeatResponse heartbeat_response = 3;
        CreatePGResponse create_pg_response = 4;
        DeletePGResponse delete_pg_response = 5;
        ApplyIDResponse apply_id_response = 6;
        CreatePoolResponse create_pool_response = 7;
    }
}
